namespace Domain.ValueObjects;

public record LocationPoint(float Latitude, float Longitude) : IValueObject;
